<resources>
    <string name="app_name">TED</string>

    <string name="titleLoadmore">For more please click on <u>Load more</u> to see more</string>
    <string name="loadMore">Load more</string>
    <string name="share">  Share </string>
    <string name="rate">  Rate  </string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="loading">Loading…</string>
    <string name="loadmore"><b>Loadmore</b></string>


    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>

    <string name="search">Search</string>
    <string name="exit">Exit</string>

    <string name="update">Update</string>
    <string name="update_the_latest_version_of_the_app_for_the_best_experience">Update the latest version of the app for the best experience</string>
    <string name="update_version">Update version</string>

    <string name="interstitialKey">ca-app-pub-5541746005515911/4066852382</string>
    <string name="rewardedVideoKey">ca-app-pub-5541746005515911/9361648305</string>

    <string name="listVideoPlaylist">Videos playlist</string>
</resources>
