<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhile">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight">

        <ImageView
            android:id="@+id/ivSearch"
            style="@style/ClickableImageView"
            android:layout_width="@dimen/headerHeight"
            android:layout_height="@dimen/headerHeight"
            android:padding="13dp"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAdvertisement"
            style="@style/ClickableImageView"
            android:layout_width="@dimen/headerHeight"
            android:layout_height="@dimen/headerHeight"
            android:layout_alignParentRight="true"
            android:padding="13dp"
            android:src="@drawable/ic_advertisement" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footerHeight"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_share"
                android:tint="@color/colorNormal" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/colorNormal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLoadmore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivLoadmore"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_see"
                android:tint="@color/colorYellow" />

            <TextView
                android:id="@+id/tvLoadmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadmore"
                android:textColor="@color/colorYellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_rate"
                android:tint="@color/colorSelected" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/colorSelected" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCategory"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_category"
                android:tint="@color/colorNormal" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/colorNormal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="@dimen/footerHeight"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorNormal" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history"
                android:textColor="@color/colorNormal" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.yarolegovich.discretescrollview.DiscreteScrollView
                    android:id="@+id/videos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v4.widget.SwipeRefreshLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:paddingRight="61dp">

                    <ImageView
                        android:id="@+id/ivStar"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_star"
                        android:tint="@color/colorSelected"
                        android:visibility="gone" />

                    <TextSwitcher
                        android:id="@+id/tsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="61dp" />

                </FrameLayout>

                <TextSwitcher
                    android:id="@+id/tsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="61dp"
                    android:layout_marginTop="8dp"
                    android:paddingRight="61dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tsDescription"
                    android:layout_marginTop="10dp"
                    android:paddingRight="61dp">

                    <ImageView
                        android:id="@+id/ivClock"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_clock"
                        android:tint="@color/colorBlue"
                        android:visibility="gone" />

                    <TextSwitcher
                        android:id="@+id/tsTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="61dp" />
                </FrameLayout>
            </LinearLayout>

            <com.hoanganhtuan01101995.state.StateView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
